--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <section>
       <h2>Registration</h2>
       <p>Please fill out the registration form to join upcoming lectures.</p>
-      <a class="btn" href="https://forms.gle/your-google-form-link" target="_blank">Register Here</a>
+      <a href="https://forms.gle/yourgoogleformlink" class="btn" target="_blank" rel="noopener noreferrer">Register Here</a>
     </section>
 
     <section>
       <h2>Payment</h2>
       <p>Scan the UPI QR code below or use the PayPal link to complete payment.</p>
       <img src="qr-placeholder.png" alt="UPI QR Code" class="qr" />
-      <a class="btn" href="https://paypal.me/yourlink" target="_blank">Pay via PayPal</a>
+      <a href="https://paypal.me/yourlink" class="btn" target="_blank" rel="noopener noreferrer">Pay via PayPal</a>
     </section>
 
     <section>
