--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <body style="background: linear-gradient(135deg, #6a9eff, #b0c4ff);">
   <header>
     <h1>Aniruddha's Quantum Flick</h1>
     <p>Explore the mysteries of science and time — one flick at a time.</p>
