--- a/index.html
+++ b/index.html
@@ -1,43 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aniruddha's Quantum Flick</title>
-  <link rel="stylesheet" href="style.css" />
+  <!-- Bootstrap CSS CDN -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      min-height: 100vh;
+      background: linear-gradient(135deg, #6a9eff, #b0c4ff);
+      color: #20264d;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    header {
+      padding: 2rem 0;
+      text-align: center;
+      color: white;
+      background-color: rgba(32, 38, 77, 0.85);
+      margin-bottom: 2rem;
+      border-radius: 0 0 15px 15px;
+    }
+    header h1 {
+      margin-bottom: 0.5rem;
+    }
+    .btn-primary {
+      background-color: #20264d;
+      border-color: #20264d;
+    }
+    .btn-primary:hover {
+      background-color: #3d4b91;
+      border-color: #3d4b91;
+    }
+    .container {
+      max-width: 600px;
+      background: white;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    .qr-img {
+      display: block;
+      margin: 1rem auto;
+      max-width: 180px;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Aniruddha's Quantum Flick</h1>
-    <p>Explore the mysteries of science and time — one flick at a time.</p>
-  </header>
-  <main>
-    <section>
-      <h2>About the Lectures</h2>
-      <p>My lectures delve into unique scientific insights and new ways of understanding the universe. Shared via secure links with registered clients only.</p>
-    </section>
 
-    <section>
-      <h2>Registration</h2>
-      <p>Please fill out the registration form to join upcoming lectures.</p>
-      <a href="https://forms.gle/yourgoogleformlink" class="btn" target="_blank" rel="noopener noreferrer">Register Here</a>
-    </section>
+<header>
+  <h1>Aniruddha's Quantum Flick</h1>
+  <p>Welcome to a new way of exploring science and time.</p>
+</header>
 
-    <section>
-      <h2>Payment</h2>
-      <p>Scan the UPI QR code below or use the PayPal link to complete payment.</p>
-      <img src="qr-placeholder.png" alt="UPI QR Code" class="qr" />
-      <a href="https://paypal.me/yourlink" class="btn" target="_blank" rel="noopener noreferrer">Pay via PayPal</a>
-    </section>
-<body style="background: linear-gradient(135deg, #6a9eff, #b0c4ff);">
-    <section>
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-      <p>WhatsApp: +91-XXXXXXXXXX</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Aniruddha. All rights reserved.</p>
-  </footer>
+<div class="container text-center">
+  <section>
+    <h2>Payment</h2>
+    <img src="your-upi-qr-placeholder.png" alt="UPI QR Code" class="qr-img" />
+    <p>Scan to pay via UPI or use your mobile number.</p>
+    <a href="https://paypal.me/your-paypal-link" target="_blank" class="btn btn-primary mb-3">Pay via PayPal</a>
+  </section>
+
+  <section>
+    <h2>Register</h2>
+    <p>Fill the registration form to get access to lectures.</p>
+    <a href="https://forms.gle/your-google-form-link" target="_blank" class="btn btn-primary">Register Here</a>
+  </section>
+</div>
+
+<!-- Bootstrap JS Bundle CDN (includes Popper) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
